Test Sandbox Project/src/objects/Agent_Shift__c.object
<CustomObject>
    <fields>
        <fullName>Add_Day__c</fullName>
        <formula>IF( End_Next_Day__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Hour__c</fullName>
        <label>End Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Logout__c</fullName>
        <label>End Logout</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Minute__c</fullName>
        <label>End Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Next_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if Checked then H+1</inlineHelpText>
        <label>End Next Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ext Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <label>Start Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Login__c</fullName>
        <label>Start Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Minute__c</fullName>
        <label>Start Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_Shift__c</fullName>
        <label>Type Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agent Shift</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type_Shift__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Start_Hour__c</columns>
        <columns>Start_Minute__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Hour__c</columns>
        <columns>End_Minute__c</columns>
        <columns>End_Time__c</columns>
        <columns>End_Next_Day__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Shift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Shifts</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_Hour_Must_Greater_than_Start_Hour</fullName>
        <active>true</active>
        <errorConditionFormula>End_Hour__c &lt; Start_Hour__c &amp;&amp; !End_Next_Day__c</errorConditionFormula>
        <errorDisplayField>End_Hour__c</errorDisplayField>
        <errorMessage>&quot;End Hour&quot; Must Greater than &quot;Start Hour&quot;.
or Check &quot;End Next Day&quot;</errorMessage>
    </validationRules>
</CustomObject>